# challenge

./: .gitignore  AGENTS.md  haskell-cheatsheet.md  main.cpp  review.md  review.py  start.py  unsolved.py  unsolved.sh
atcoder/: start.sh
cf-contest/1093-d2/: a.py  b.py  ta1.txt
cf-contest/1095-d2/: a.cpp
cf-contest/1097-d2/: a.cpp  b.cpp  bt1.txt  bt2.txt
cf-contest/edu-189-d2/: a.py  b.py  c.py  d.py  d2.py  d3.py
coach/: .gitignore  README.md  coach
coach/tests/: test_cli.py  test_llm.py  test_scanner.py
codechef/: start.sh  unsolved.sh
codechef/adjsumpar/: link.txt  main.cpp
codechef/atm2/: link.txt  main.cpp
codechef/avgproblem/: link.txt  main.cpp
codechef/examtime/: link.txt  main.cpp  main.hs
codechef/ezspeak/: link.txt  main.cpp
codechef/jassignments/: link.txt  main.cpp
codechef/subscribe_/: link.txt  main.cpp
codechef/wordle/: link.txt  main.cpp
codeforces/: start.sh  unsolved.py
codeforces/1398-c-good-subarrays/: link.txt
codeforces/2008-e-alternating-string/: link.txt
codewars/: start.sh  unsolved.sh
cptop/: README.md  pyproject.toml
cptop/data/: problem_tags.json  valid_tags.json
cptop/src/cptop/: __init__.py  app.py  cli.py  models.py  platform_chart.py  scanner.py  skill_matrix.py  tags.py
cptop/tests/: test_app.py  test_scanner.py  test_skill_matrix.py  test_tags.py
cses/: start.sh  unsolved.sh
dmoj/: start.sh  unsolved.sh
hackerrank/: start.sh
project_euler/: pyproject.toml  start.sh  utils.py
usaco/: start.sh
usaco.guide/: start.sh
yosupo/: start.py  start.sh  unsolved.sh
(+183 files in other folders)
